--- a/styleguide/public/main-dev.css
+++ b/styleguide/public/main-dev.css
@@ -375,10 +375,12 @@ textarea {
   vertical-align: baseline; }
   .has-inline-elements > * {
     display: inline-block;
-    margin: 0 0.5rem; }
+    margin: 0 0 0 1rem; }
+    .has-inline-elements > *:first-child {
+      margin: 0; }
 
 .width-capped {
-  width: 100%;
+  max-width: 800px;
   max-width: 80rem; }
 
 .width-fullbleed {
@@ -388,7 +390,7 @@ textarea {
   left: -50%;
   margin-left: 50%; }
   .width-fullbleed > * {
-    width: 100%;
+    max-width: 800px;
     max-width: 80rem; }
 
 .has-background--primary {
@@ -605,7 +607,8 @@ select {
     width: 100%;
     position: relative;
     z-index: 3;
-    display: inline-block; }
+    display: inline-block;
+    border: 1px solid #d9d9d9; }
 
 textarea {
   height: 12rem;
@@ -627,7 +630,6 @@ textarea {
 
 .form-checkbox,
 .form-radio {
-  margin: 0;
   padding: 1rem 1rem 1rem 2rem;
   position: relative;
   cursor: pointer;
@@ -790,7 +792,7 @@ button,
     padding: 0;
     position: relative; }
   .navigation-site > .menu {
-    width: 100%;
+    max-width: 800px;
     max-width: 80rem;
     display: -webkit-box;
     display: -webkit-flex;
@@ -833,7 +835,7 @@ button,
     margin: 0; }
 
 .page-main {
-  width: 100%;
+  max-width: 800px;
   max-width: 80rem;
   margin: 0 auto; }
 
@@ -903,7 +905,7 @@ button,
     background: white; }
 
 .panel, .panel-fullbleed {
-  width: 100%;
+  max-width: 800px;
   max-width: 80rem;
   margin: 1.5rem; }
 
@@ -916,7 +918,7 @@ button,
   margin-top: 1.5rem;
   margin-bottom: 1.5rem; }
   .panel-fullbleed > * {
-    width: 100%;
+    max-width: 800px;
     max-width: 80rem; }
 
 .card {
@@ -1133,7 +1135,7 @@ button,
   -moz-flex-flow: row nowrap;
   -ms-flex-flow: row nowrap;
   flex-flow: row nowrap;
-  width: 100%;
+  max-width: 800px;
   max-width: 80rem;
   background: #f2f2f2;
   border-top: 1px dotted #d9d9d9;
